force-app/main/default/objects/Appointment_Slot__c/Appointment_Slot__c.object-meta.xml
<CustomObject>
    <label>Appointment Slot</label>
    <nameField>
        <label>Appointment Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointment Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>