force-app/main/default/objects/Appointment_Slot__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointment Slots</relationshipLabel>
    <relationshipName>Appointment_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>