force-app/main/default/objects/Appointment_Slot__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Appointment Slots</relationshipLabel>
    <relationshipName>Appointment_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>