force-app/main/default/objects/Appointment_Slot__c/fields/Slot_Date__c.field-meta.xml
<CustomField>
    <fullName>Slot_Date__c</fullName>
    <description>Date of the Slot</description>
    <label>Slot Date</label>
    <type>Date</type>
</CustomField>